--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -3,6 +3,7 @@ add_executable(example
   window.cpp
   glew.c
   example.cpp
+  vec2.cpp
   )
 target_link_libraries(example
   glfw
@@ -16,6 +17,7 @@ add_dependencies(example glfw nanovg ${COPY_BINARY})
 add_executable(tests
   glew.c
   tests.cpp
+  vec2.cpp
   )
 target_link_libraries(tests
   glfw
